# python_project_management_practice

./: README.md  main.py  pyproject.toml
sequences/src/fastq_stats/: script_calc_fastq_stats.py
